--- a/Laroni-Travel/View/ReizenView.xaml
+++ b/Laroni-Travel/View/ReizenView.xaml
@@ -46,27 +46,28 @@
                 </Grid.RowDefinitions>
                 <TextBox
                     Text="{Binding ID}"
-        materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
-        VerticalAlignment="center"
-        materialDesign:HintAssist.Hint="Search..."
-        AcceptsReturn="True"
-        IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
-        Style="{StaticResource MaterialDesignOutlinedTextBox}"
-        TextWrapping="Wrap"
-        VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
+                    materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
+                    VerticalAlignment="center"
+                    materialDesign:HintAssist.Hint="Search..."
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
                 <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
                         <TextBlock>Zoeken</TextBlock>
                     </StackPanel>
                 </Button>
+                <Label Content="Beheer Reizen" Margin="15" Foreground="White" FontSize="25" Grid.Row="1" Grid.Column="0" />
                 <DataGrid ItemsSource="{Binding Reizen}"
                   SelectedItem="{Binding SelectedGroepsreis}"
 
                   AutoGenerateColumns="False" IsReadOnly="True"
                   AlternatingRowBackground="#BC80AB"
                   Background="LightGray"
-                  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Margin="10">
+                  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="10">
                     <DataGrid.Style>
                         <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MaterialDesignDataGrid}">
                             <Style.Triggers>
@@ -94,125 +95,174 @@
                 <ComboBox
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-    Width="250"
-    materialDesign:HintAssist.Hint="Thema"
-    IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
-    ItemsSource="{Binding Thema}"
-     SelectedValue="{Binding ReisRecord.ThemaId, ValidatesOnDataErrors=True}"
+                    Width="250"
+                    materialDesign:HintAssist.Hint="Thema"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
+                    SelectedItem="{Binding ReisRecord.Thema}"
+                    ItemsSource="{Binding Thema}"
+                    SelectedValue="{Binding ReisRecord.ThemaId, ValidatesOnDataErrors=True}"
                     SelectedValuePath="Id"
-    Style="{StaticResource MaterialDesignOutlinedComboBox}"
-    Grid.Row="2" Grid.Column="0" Background="White" Margin="10" />
+                    Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    Grid.Row="3" Grid.Column="0" Background="White" Margin="10" />
                 <ComboBox
                     Width="250"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-    materialDesign:HintAssist.Hint="Leeftijdscategorieën"
-    IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
-    ItemsSource="{Binding LeeftijdsCategorie}"
-     SelectedValue="{Binding ReisRecord.LeeftijdsCategorieId, ValidatesOnDataErrors=True}"
+                    materialDesign:HintAssist.Hint="Leeftijdscategorieën"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
+                    SelectedItem="{Binding ReisRecord.LeeftijdsCategorieen}"
+                    ItemsSource="{Binding LeeftijdsCategorie}"
+                    SelectedValue="{Binding ReisRecord.LeeftijdsCategorieId, ValidatesOnDataErrors=True}"
                     SelectedValuePath="Id"
-    Style="{StaticResource MaterialDesignOutlinedComboBox}"
-    Grid.Row="3" Grid.Column="0" Background="White" Margin="10" />
-
+                    Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    Grid.Row="4" Grid.Column="0" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding ReisRecord.Bestemming.Straatnaam}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Straatnaam"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="2" Grid.Column="1" Background="White" Margin="10" />
-
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Straatnaam"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding ReisRecord.Bestemming.Huisnummer}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Huisnummer"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Huisnummer"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding ReisRecord.Bestemming.Postcode}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Postcode"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Postcode"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding ReisRecord.Bestemming.Gemeente}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Gemeente"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Gemeente"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="6" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding ReisRecord.Bestemming.Land}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Land"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="6" Grid.Column="1" Background="White" Margin="10" />
-                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Startdatum" Grid.Row="2" Grid.Column="2" Text="{Binding ReisRecord.StartDatum}" />
-                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Einddatum" Grid.Row="3" Grid.Column="2" Text="{Binding ReisRecord.EindDatum}" />
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="2" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenGroepsreis">
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Land"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="7" Grid.Column="1" Background="White" Margin="10" />
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Startdatum" Grid.Row="3" Grid.Column="2" Text="{Binding ReisRecord.StartDatum}" />
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Einddatum" Grid.Row="4" Grid.Column="2" Text="{Binding ReisRecord.EindDatum}" />
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenGroepsreis">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="FloppyDisk" Margin="0 0 10 0" />
                         <TextBlock>Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenGroepsreis">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="4" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenGroepsreis">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Edit" Margin="0 0 10 0" />
                         <TextBlock>Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="4" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenGroepsreis">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="5" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenGroepsreis">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Delete" Margin="0 0 10 0" />
                         <TextBlock>Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="5" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ResettenGroepsreis">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="6" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ResettenGroepsreis">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Cancel" Margin="0 0 10 0" />
                         <TextBlock>Annuleren</TextBlock>
                     </StackPanel>
                 </Button>
-                <ListView ItemsSource="{Binding Reizen.Deelnemers}" Height="175" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2">
+                <Label Content="Deelnemers reis" Margin="15" Foreground="White" FontSize="25" Grid.Row="8" Grid.Column="0" />
+                <ListView ItemsSource="{Binding Reizen.Deelnemers}" Grid.Row="9" Grid.Column="0" Margin="15">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn
-        DisplayMemberBinding="{Binding DeelnemerId}"
-        Header="Deelnemer ID" />
-                            <GridViewColumn
-        DisplayMemberBinding="{Binding Naam}"
-        Header="Naam" />
-                            <GridViewColumn
-        Header="Betaald">
+                            <GridView.ColumnHeaderContainerStyle>
+                                <Style TargetType="{x:Type GridViewColumnHeader}">
+                                    <Setter Property="Background" Value="#3D004E" />
+                                    <Setter Property="Foreground" Value="White" />
+                                    <Setter Property="Margin" Value="15" />
+                                    <Setter Property="BorderBrush" Value="Transparent" />
+                                </Style>
+                            </GridView.ColumnHeaderContainerStyle>
+                            <GridViewColumn DisplayMemberBinding="{Binding DeelnemerId}" Header="Deelnemer ID" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Naam}" Header="Naam" />
+                            <GridViewColumn Header="Betaald">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <CheckBox
-            VerticalAlignment="Center"
-            IsChecked="{Binding IsSelected}" />
+                                        <CheckBox VerticalAlignment="Center" IsChecked="{Binding IsBetaald}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                         </GridView>
                     </ListView.View>
                 </ListView>
+                <TextBox
+                    Text="{Binding Deelnemer.Familienaam}"
+                    materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
+                    VerticalAlignment="center"
+                    materialDesign:HintAssist.Hint="Familienaam..."
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" Grid.Row="9" Grid.Column="1" Foreground="Black" Background="White" Margin="15" />
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="9" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
+                        <TextBlock>Zoeken</TextBlock>
+                    </StackPanel>
+                </Button>
+                <DataGrid ItemsSource="{Binding Deelnemers}"
+                  SelectedItem="{Binding SelectedDeelnemer}"
+                  AutoGenerateColumns="False" IsReadOnly="True"
+                  AlternatingRowBackground="#BC80AB"
+                  Background="LightGray"
+                  Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2" Margin="10">
+                    <DataGrid.Style>
+                        <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MaterialDesignDataGrid}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Path=Items.Count, RelativeSource={RelativeSource Self}}" Value="0">
+                                    <Setter Property="Visibility" Value="Visible" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGrid.Style>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding Deelnemer.Voornaam}" Header="Voornaam" />
+                        <DataGridTextColumn Binding="{Binding Deelnemer.Naam}" Header="Naam" />
+                        <DataGridTextColumn Binding="{Binding Deelnemer.Leeftijd}" Header="Leeftijd" />
+                    </DataGrid.Columns>
+                </DataGrid>
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="10" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenGroepsreis">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock>Toevoegen aan Reis</TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="11" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenGroepsreis">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock>Verwijderen uit Reis</TextBlock>
+                    </StackPanel>
+                </Button>
             </Grid>
         </ScrollViewer>
         <Grid Width="200" HorizontalAlignment="Left" Background="#060047">
