--- a/Laroni-Travel/View/OpleidingView.xaml
+++ b/Laroni-Travel/View/OpleidingView.xaml
@@ -80,11 +80,11 @@
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Beschrijving}" Header="Beschrijving" />
                         <DataGridTextColumn Binding="{Binding DatumInfo}" Header="Datum" />
-                        <DataGridTextColumn Binding="{Binding Bestemming.Straatnaam}" Header="Straatnaam" />
-                        <DataGridTextColumn Binding="{Binding Bestemming.Huisnummer}" Header="Huisnr." />
-                        <DataGridTextColumn Binding="{Binding Bestemming.Postcode}" Header="PC" />
-                        <DataGridTextColumn Binding="{Binding Bestemming.Gemeente}" Header="Gemeente" />
-                        <DataGridTextColumn Binding="{Binding Bestemming.Land}" Header="Land" />
+                        <DataGridTextColumn Binding="{Binding OpleidingBestemmingen.Bestemming.Straatnaam}" Header="Straatnaam" />
+                        <DataGridTextColumn Binding="{Binding OpleidingBestemmingen.Bestemming.Huisnummer}" Header="Huisnr." />
+                        <DataGridTextColumn Binding="{Binding OpleidingBestemmingen.Bestemming.Postcode}" Header="PC" />
+                        <DataGridTextColumn Binding="{Binding OpleidingBestemmingen.Bestemming.Gemeente}" Header="Gemeente" />
+                        <DataGridTextColumn Binding="{Binding OpleidingBestemmingen.Bestemming.Land}" Header="Land" />
                         <DataGridTextColumn Binding="{Binding AantalDeelnemers}" Header="Deelnemers" />
                     </DataGrid.Columns>
                 </DataGrid>
